# 6ogdashka_BSU

./: README.md
1 sem/LAB1/: russian.h  task1.cpp  task10.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
1 sem/LAB11/PART1/: Students.txt  a.out  russian.h  task_1.cpp  task_2.cpp
1 sem/LAB11/PART2/: CMakeLists.txt  main.cpp
1 sem/LAB12/: a.out  task_6.cpp
1 sem/LAB2/: a.out  task19.cpp
1 sem/LAB3/: dynamic_array.h  solve.cpp  std_array.h  vector.h
1 sem/LAB4/: LB4_V5.cpp  a.out
1 sem/LAB5/: a.out
1 sem/LAB6/: Simple_Matrix.cpp  Simple_Matrix.h  a.out
1 sem/LAB8/: LB8_V6.cpp
1 sem/LAB9/: V6.cpp
1 sem/exam_preparation/: Employee.cpp  Employee.h  a.out  numbers.txt  strings.txt  test.cpp
1 sem/задание на каникулах/: Bahdan.h  BattleSystem.h  Kostya.h  a.out  main.cpp  mobs.h
2 sem/: TempleteClass.h  a.out  compile_flags.txt  main.cpp  out.txt
2 sem/LAB1/: dop_task.cpp  run_code
2 sem/LAB1/ASM/: run_code  task1.cpp  task2.cpp
2 sem/LAB1/C++/: StringAndSymbol.cpp  TempleteClass.h  main.cpp
2 sem/LAB2/: V6.h  XClass.cpp  a.out  main.cpp
2 sem/LAB2/ASM/: task1.cpp  task2.cpp
2 sem/LAB2/C++/: XClass.h  main.cpp
2 sem/LAB3/ASM/: a.out  run_code  task1.cpp  task1_v6.cpp  task2_v6.cpp  task3_v6.cpp
2 sem/LAB3/C++/: ArraysV6.cpp  Participant6.cpp  Participant6.h  a.out  main.cpp  out.txt
2 sem/LAB4/C++/: BinaryTree.h  DoubleList.h  SingleList.h  main.cpp
2 sem/test/: booblesort.cpp  picksort.cpp  run
2 sem/trash/: 6.cpp  StringAndSymbol.cpp  test.cpp
LAB1/: task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
LAB11/: a.out  task_1.cpp
LAB11/PART1/: CMakeLists.txt  Fio.txt  Group.txt  task_2.cpp
LAB11/PART2/: Book.h  CMakeLists.txt  Library.cpp  Library.h  a.out  task_2.cpp  test.cpp
LAB12/: a.out  input.txt  task_6.cpp
LAB2/: task10.cpp  task17.cpp  task19.cpp
LAB3/: CONST.h  a.out  arrays.h  dinamic.array.cpp  dinamic.array.h  dynamic_array.h  solve.cpp  static.array.cpp  static.array.h  static_array.h  std::array.cpp  std::array.h  std_array.h  vector.cpp  vector.h
LAB4/: V25.11.cpp  V5.cpp  a.out  solve_V5.cpp
LAB5/: LB5_V6.cpp  Untitled-1.cpp  a.out  solve_V6.cpp
LAB6/: CMakeLists.txt  LB6_V6.cpp  Simple_Matrix.cpp  Simple_Matrix.h  Solve.cpp  a.out  char_matrix.txt  double_matrix.txt  input_matrix.txt  int_matrix.txt  solve_V6.cpp
LAB7/: Function.cpp  Function.h  LB7_V6.cpp  Solve.cpp  a.out  solve_V6.cpp  task.cpp
LAB8/: LB8_V6.cpp  russian.h
LAB9/: V6.cpp  input.txt
LB10/: CMakeLists.txt  a.out  fraction.cpp  fraction.h  main.cpp
exam_preparation/: Source.cpp  Split.cpp
test/: a.out  class.cpp  input.txt  stdstring.cpp  test.cpp
задание на каникулах/: Ability.h  BattleSystem.h  Kostya.h  a.out  class.h  main.cpp  mobs.h  weapon.h
